deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhess
  labels:
    app: rhess
spec:
  selector:
    app: rhess
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
