deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhess
  labels:
    app: rhess
spec:
  to:
    kind: Service
    name: rhess
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
